--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/button": "2.2.26",
     "@heroui/code": "2.2.20",
     "@heroui/dropdown": "2.3.26",
+    "@heroui/image": "^2.2.16",
     "@heroui/input": "2.4.27",
     "@heroui/kbd": "2.2.21",
     "@heroui/link": "2.2.22",
