--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "framer-motion": "11.18.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-photo-album": "^3.1.0",
     "react-router-dom": "6.23.0",
     "react-ui-scrollspy": "^2.3.0",
     "tailwind-variants": "3.1.1",
