--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@heroui/accordion": "^2.2.24",
     "@heroui/avatar": "^2.2.22",
     "@heroui/button": "2.2.26",
     "@heroui/card": "^2.2.25",
