--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "11.18.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-photo-album": "^3.1.0",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "3.1.1",
