--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-multi-carousel": "^2.8.6",
     "react-photo-album": "^3.1.0",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "3.1.1",
